--- a/index.html
+++ b/index.html
@@ -29,21 +29,98 @@
     <link rel="shortcut icon" href="./assets/img/img.svg" type="image/ico">
 
     <!-- hoja de estilos  -->
-    <link rel="stylesheet" href="assets/css/estilos.css">
+    <link rel="stylesheet" href="./assets/css/main.css">
 
-		<!-- hoja de javascript  -->
+
+    <!-- hoja de javascript  -->
     <script defer src="./assets/js/javascript.js"></script>
 
     <!-- Fuentes de google -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=PT+Mono&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=PT+Mono&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 
-
-
+   
 </head>
-
 <body>
+    <nav class="nav">
+        <div class="nav__container">
+            <div class="nav__container_logo">
+                <img class="nav__logo" src="./assets/img/logo.png" alt="">
+            </div>
+            <div class="nav__container-navlist">
+                <ul class="navlist">
+                    <li class="navlist__link">
+                        <a href="">Acerca de</a>
+                    </li>
+                    <li class="navlist__link">
+                        <a href="">Tienda</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="nav__container-buttons">
+                <button class="btn btn--white">Iniciar sesión</button>
+                <button class="btn btn--success">Registrate</button>
+            </div>
+        </div>
+    </nav>
+<header class="header">
+    <div class="header__container-image">
+        <img class="header__image" src="./assets/img/img-1.png" alt="">
+        <div class="header__container-block-info">
+            <div class="header__block-info1">
+                <h3>+50</h3>
+                <p>Variedades de café</p>
+            </div>
+            <div class="header__block-info2">
+                <h3>20</h3>
+                <p>Países diferentes</p>
+            </div>
+            <div class="header__block-info3">
+                <h3>+1000</h3>
+                <p>Accesorios para hacer el mejor café</p>
+            </div>
+        </div>
+    </div>
+    <div class="header__container-title">
+        <h1 class="header__title">Café Agere</h1>
+        <h2 class="header__subtitle">Coffe Shop</h2>
+        <div class="header__block-yellow"></div>
+        <div class="header__block-orange"></div>
+    </div>
+</header>
+<main class="main">
+    <section class="main__container">
+        <div class="main__container-text">
+            <div class="main__text1">
+                <h2>Ven a Conocernos</h2>
+            </div>
+            <div class="main__text2">
+                <p>Disfruta una gran experiencia comprando un te o un café dentro de nuestra tienda o si prefieres puedes comprarlo y llevarlo a tu casa
+                </p>
+            </div>
+        </div>
+        <div class="main__container-images">
+            <div class="main__container-image1">
+                <img class="main__image1" src="./assets/img/img-2.png" alt="">
+            </div>            
+            <div class="main__container-image2">
+                <img class="main__image2" src="./assets/img/img-3.png" alt="">
+            </div>
+            <div class="main__container-image3">
+                <img class="main__image3" src="./assets/img/img-4.png" alt="">
+            </div>
+            <div class="main__container-block-blue">
+                <div class="main__block-blue">
+                </div>
+            </div>
+        </div>
+
+    </section>
+
+</main>
 
 </body>
 
